--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@
     position: fixed;
     height: 100%;
     width: 100%;
+    justify-content: center;
+    align-items: center;
 }
 .loader img{
     display: block;
@@ -89,13 +91,9 @@
 /*-------VERSI MOBILE------- */
 @media (max-width: 575.98px) {
 
-    .tombolberanda,.tombolkoni,
-    .tombolanggota,.tombolberita,.tombolevent,
-    .tombolgallery,.tombolcabangolahraga,
-    .tombolkegiatan,.tombolpon,.tombolporprovsu{
-        border-color: transparent;
+    body{
+        overflow-x: hidden;
     }
-
 /* ====================*/
 /* Tombol Back To Top */
 .backTop {
@@ -129,7 +127,6 @@
         margin-left: auto;
         margin-right: auto;
     }
-
     .info-panel {
         background-color: #CD2122;
         margin-top: -3px;
@@ -148,7 +145,7 @@
         width:0px;
         margin-top: 10px;
         border-bottom:30px solid #cfc6c6;
-        border-left:330px solid transparent;
+        border-left:300px solid transparent;
         border-right: 0px solid transparent;
         position: relative;
         display: block;
@@ -158,7 +155,7 @@
         height:10px;
         margin-top: -16px;
         border-bottom:10px solid #CD2122;
-        border-right:360px solid transparent;
+        border-right:300px solid transparent;
         position: relative;
         display: block;
         z-index: 20;
@@ -206,6 +203,9 @@
 /* akhir info panel */
 /* ======================= */
 /* cabang olahraga */
+.menu-olahraga{
+    width: 100%;
+}
 
 .judulcabang {
     font-size: 44px;
