--- a/style.css
+++ b/style.css
@@ -94,6 +94,11 @@
     body{
         overflow-x: hidden;
     }
+
+    .loader img{
+        top: 0;
+        margin-top: 30%;
+    }
 /* ====================*/
 /* Tombol Back To Top */
 .backTop {
